@@ -1,5 +1,5 @@
 <?php
-// $Id: simpletest.test,v 1.1.2.2 2008/08/14 03:30:43 boombatower Exp $
+// $Id: simpletest.test,v 1.1.2.3 2008/08/23 20:23:04 boombatower Exp $
 
 class SimpleTestTestCase extends DrupalWebTestCase {
   /**
@@ -190,7 +190,7 @@ class SimpleTestTestCase extends DrupalWebTestCase {
    * @return fieldset containing the results for group this test is in.
    */
   function getResultFieldSet() {
-    $fieldsets = $this->elements->xpath('//fieldset');
+    $fieldsets = $this->xpath('//fieldset');
     $info = $this->getInfo();
     foreach ($fieldsets as $fieldset) {
       if ($fieldset->legend == $info['group']) {
