@@ -1,7 +1,9 @@
-// $Id: CHANGELOG.txt,v 1.1.2.9 2008/08/15 16:48:36 boombatower Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.10 2008/08/23 20:23:04 boombatower Exp $
 
 SimpleTest 6.x-2.3, xxxx-xx-xx (development version)
 ------------------------------
+- Backports:
+    * #297869: Add xpath method to SimpleTest.
 
 SimpleTest 6.x-2.2, 2008-08-15
 ------------------------------
